# shooter

./: .gitignore  AUTHORS  ChangeLog  LICENSE  README  REQUIREMENTS  TODO  configure.ac  make_tgz.sh
assets/: AUTHORS
include/: assets.h  guns.h  particles.h  shooter.h
src/: Makefile.am  assets.c  collision.c  delay.c  draw.c  flying_objs.c  guns.c  init.c  inputs.c  main.c  particles.c  player.c  score.c  spawning.c
